fixed layout home
home layout

--- a/CYJ/Views/GOALACTUALs/Index.cshtml
+++ b/CYJ/Views/GOALACTUALs/Index.cshtml
@@ -85,7 +85,7 @@
                                 <tr>
 
                                     <th>
-                                        @Html.DisplayNameFor(model => model.FISCALYEAR.fy)
+                                        @Html.DisplayNameFor(model => model.FISCALYEAR1.fy)
                                     </th>
                                     <th>
                                         @Html.DisplayNameFor(model => model.QUARTEROPTION.quarterOpt)
@@ -117,7 +117,7 @@
                                     {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.FISCALYEAR.fy)
+                                                @Html.DisplayFor(modelItem => item.FISCALYEAR1.fy)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.QUARTEROPTION.quarterOpt)
