--- a/CYJ/Views/Shared/_mytemplate.cshtml
+++ b/CYJ/Views/Shared/_mytemplate.cshtml
@@ -9,8 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
-    <!-- Bootstrap core CSS     -->
-    <link href="@Url.Content("~/Content/mytemplate/")css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    
 
     <!--  Material Dashboard CSS    -->
     <link href="@Url.Content("~/Content/mytemplate/")css/material-dashboard.css" rel="stylesheet" />
@@ -28,7 +29,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="red" data-image="@Url.Content("~/Content/mytemplate/")img/sidebar-1.jpg">
+        <div class="sidebar" style="background-color:Red" data-image="@Url.Content("~/Content/mytemplate/")img/sidebar-1.jpg">
             <div class="logo">
                 <center>
                     <a href="https://www.cityyear.org/jacksonville" class="simple-text">
@@ -39,17 +40,18 @@
             <div class="sidebar-wrapper">
                 <ul class="nav">
                     <li rel="tooltip" title="Home">
-                        <a href="@Url.Action("Index", "Home")"><i class="material-icons md-18">home</i>HOME
-                           
+                        <a href="@Url.Action("Index", "Home")">
+                            <i class="material-icons md-18">home</i>HOME
+
                         </a>
-                        
+
                     </li>
                     @*<li rel="tooltip" title="About">
-                        <a href="@Url.Action("Home", "ABOUTs1")"><i class="material-icons md-18">location_city</i> 
-                            ABOUT
-                        </a>
-                    </li>*@
-                    <li rel="tooltip" title="Redirects to Add A New Item, Update A Goal, Edit About Page"><a href="@Url.Action("Admin", "Home")"><i  class="material-icons md-18">verified_user</i>ADMIN</a></li>
+                            <a href="@Url.Action("Home", "ABOUTs1")"><i class="material-icons md-18">location_city</i>
+                                ABOUT
+                            </a>
+                        </li>*@
+                    <li rel="tooltip" title="Redirects to Add A New Item, Update A Goal, Edit About Page"><a href="@Url.Action("Admin", "Home")"><i class="material-icons md-18">verified_user</i>ADMIN</a></li>
                     <li rel="tooltip" title="Redirects to Service Delivery Graphs"><a href="@Url.Action("ServiceDelivery", "GRAPHs")"><i class="material-icons md-18">school</i>SERVICE DELIVERY</a></li>
                     <li rel="tooltip" title="Redirects to Corp Member Experience Graphs"><a href="@Url.Action("CorpMemberExperience", "GRAPHs")"><i class="material-icons md-18">group</i>CORP MEMBER EXPERIENCE</a></li>
                     <li rel="tooltip" title="Redirects to External Affair Graphs"><a href="@Url.Action("ExternalAffairs", "GRAPHs")"><i class="material-icons md-18">event</i>EXTERNAL AFFAIRS</a></li>
@@ -109,7 +111,13 @@
     </div>
 
 </body>
-@RenderSection("Scripts", false)
+
+</html>
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
+
 <!--Template Scripts -->
 <!--   Core JS Files   -->
 <script src="@Url.Content("~/Content/mytemplate/")js/jquery-3.2.1.min.js" type="text/javascript"></script>
@@ -332,5 +340,3 @@
 </script>
 
 
-
-</html>
